--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -16,22 +16,16 @@
 						<svg class="svg-inline--fa fa-table-columns" aria-hidden="true" focusable="false"
 						     data-prefix="fas" data-icon="table-columns" role="img" xmlns="http://www.w3.org/2000/svg"
 						     viewBox="0 0 512 512" data-fa-i2svg="">
-							<path fill="currentColor" d="M384,80h16V32H232V0h-64v32H0v48h16v224H0v48h62.024l-32,144h48.392l32.008-144H176v144h48V352h65.584l32.008,144h48.392
-				l-32-144H400v-48h-16V80z M184,16h32v16h-32V16z M16,48h368v16H16V48z M368,80v224H32V80H368z M65.584,480H49.976l28.44-128
-				h15.608L65.584,480z M208,480h-16V352h16V480z M350.024,480h-15.608l-28.44-128h15.608L350.024,480z M384,336H16v-16h368V336z"></path>
-							<polygon fill="currentColor"
-							         points="304,272 64,272 64,112 336,112 336,272 320,272 320,288 352,288 352,96 48,96 48,288 304,288 			"/>
-							<path fill="currentColor" d="M268.32,208l45.608,53.2l12.144-10.408L275.68,192h-12.376c0.392-2.656,0.696-5.32,0.696-8c0-30.872-25.128-56-56-56
-				c-25.096,0-46.616,16.472-53.576,40H140.16l-66.408,83l12.504,10l61.584-77h55.992l53.608,76.584l13.112-9.168l-29.096-41.56
-				l1.856-1.856H268.32z M236.688,192l-4.544,4.544L212.168,168H171.52c6.216-14.296,20.248-24,36.48-24c22.056,0,40,17.944,40,40
-				c0,2.672-0.368,5.344-0.928,8H236.688z"></path>
-							<path fill="currentColor" d="M487.936,81.488L460.28,40h-24.56l-27.656,41.488C402.792,89.392,400,98.6,400,108.112V112
-				c0,14.168,6.208,26.88,16,35.68V464c0,17.648,14.352,32,32,32s32-14.352,32-32V147.68c9.792-8.792,16-21.504,16-35.68v-3.888
-				C496,98.6,493.208,89.392,487.936,81.488z M464,464c0,8.824-7.176,16-16,16c-8.824,0-16-7.176-16-16v-16h32V464z M464,432h-32
-				V192h32V432z M464,176h-32v-18.8c5.016,1.784,10.384,2.8,16,2.8c5.616,0,10.984-1.024,16-2.8V176z M480,112
-				c0,17.648-14.352,32-32,32s-32-14.352-32-32v-3.888c0-6.344,1.856-12.48,5.376-17.752L440,62.424V104h16V62.424l18.624,27.936
-				c3.52,5.272,5.376,11.408,5.376,17.752V112z"></path>
-
+							<path fill="currentColor" d="M143.891,239.576c53.747,0,97.473-43.725,97.473-97.472s-43.725-97.472-97.473-97.472
+                  c-53.747,0-97.472,43.725-97.472,97.472C46.419,195.849,90.144,239.576,143.891,239.576z"></path>
+							<path fill="currentColor" d="M143.893,256.635C64.55,256.635,0,321.18,0,400.516v48.799c0,9.974,8.086,18.06,18.06,18.06h251.654
+				c9.974,0,18.06-8.086,18.06-18.06v-48.799C287.774,321.553,223.913,256.635,143.893,256.635z"></path>
+							<path fill="currentColor" d="M277.204,288.878c-2.526,2.061-2.896,5.777-0.887,8.344c40.646,51.985,35.539,98.905,35.539,152.094
+				c0,3.649-0.467,7.19-1.345,10.57c-0.986,3.796,1.906,7.49,5.829,7.49h177.6c9.974,0,18.06-8.086,18.06-18.06v-48.799
+				C512,278.194,369.744,213.381,277.204,288.878z"></path>
+							<path fill="currentColor" d="M270.641,222.44L270.641,222.44c0,9.974,8.086,18.06,18.06,18.06h158.823c9.974,0,18.06-8.086,18.06-18.06v-80.333
+				c0-0.001,0-0.002,0-0.002c-0.005-53.964-44.013-97.482-97.478-97.482c-55.908,0-99.56,46.932-97.466,101.414V222.44z
+				 M306.791,139.032h122.598c1.735,35.174-26.395,64.421-61.281,64.421C332.511,203.453,304.98,173.234,306.791,139.032z"></path>
 						</svg>
 					</div>
 					회원 관리
@@ -50,7 +44,8 @@
 					</nav>
 				</div>
 
-				<a class="nav-link" th:href="@{/pages/con-view}">
+				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#contents"
+				   aria-expanded="false" aria-controls="collapsePages">
 					<div class="sb-nav-link-icon">
 						<svg class="svg-inline--fa fa-chart-area" aria-hidden="true" focusable="false" data-prefix="fas"
 						     data-icon="chart-area" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
@@ -63,7 +58,88 @@
 			s6.716-15,15-15h292.291c8.284,0,15,6.716,15,15C390.146,139.258,383.43,145.974,375.146,145.974z"></path>
 						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
 					컨텐츠 관리
+					<div class="sb-sidenav-collapse-arrow">
+						<svg class="svg-inline--fa fa-angle-down" aria-hidden="true" focusable="false" data-prefix="fas"
+						     data-icon="angle-down" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+						     data-fa-i2svg="">
+							<path fill="currentColor"
+							      d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"></path>
+						</svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
 				</a>
+				<div class="collapse" id="contents" aria-labelledby="headingOne"
+				     data-bs-parent="#sidenavAccordion">
+					<nav class="sb-sidenav-menu-nested nav">
+						<a class="nav-link" th:href="@{/admin/contents/list}">컨텐츠 리스트</a>
+						<a class="nav-link" th:href="@{/admin/contents/create}">컨텐츠 추가</a>
+					</nav>
+				</div>
+
+				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#shop"
+				   aria-expanded="false" aria-controls="collapsePages">
+					<div class="sb-nav-link-icon">
+						<svg class="svg-inline--fa" aria-hidden="true" focusable="false" data-prefix="fas"
+						     data-icon="chart-area" role="img" xmlns="http://www.w3.org/2000/svg"
+						     viewBox="100 20 749 750"
+						     data-fa-i2svg="" style="transform: scaleY(-1);">
+							<path d="M142 837 c-15 -16 -22 -36 -22 -64 0 -23 -9 -63 -20 -89 -22 -50 -20
+									-90 6 -131 10 -16 14 -76 16 -245 l3 -223 355 0 355 0 3 223 c2 169 6 229 16
+									245 26 41 28 81 6 131 -11 26 -20 65 -20 85 0 24 -8 49 -21 65 l-20 26 -318 0
+									-318 0 -21 -23z m638 -76 c0 -22 9 -60 20 -86 24 -55 19 -83 -21 -121 -25 -24
+									-39 -29 -79 -29 -32 0 -54 6 -67 18 -25 22 -40 22 -88 -3 -49 -25 -81 -25
+									-130 0 -48 25 -63 25 -88 3 -13 -12 -35 -18 -67 -18 -40 0 -54 5 -79 29 -40
+									38 -45 66 -21 121 11 26 20 64 20 86 l0 39 300 0 300 0 0 -39z m-300 -301 c19
+									1 53 8 74 18 38 17 41 17 75 0 39 -20 86 -23 125 -8 l26 10 0 -170 0 -170 -40
+									0 -39 0 -3 128 -3 127 -135 0 -135 0 -3 -127 -3 -128 -119 0 -120 0 0 170 0
+									170 26 -10 c38 -15 85 -12 124 8 33 17 37 17 75 0 22 -10 56 -18 75 -18z m160
+									-220 l0 -100 -80 0 -80 0 0 100 0 100 80 0 80 0 0 -100z" fill="currentColor"/>
+							<path d="M564 746 c-10 -26 4 -48 28 -44 17 2 23 10 23 28 0 18 -6 26 -23 28
+								-13 2 -25 -3 -28 -12z" fill="currentColor"/>
+							<path d="M664 746 c-10 -26 4 -48 28 -44 17 2 23 10 23 28 0 18 -6 26 -23 28
+								-13 2 -25 -3 -28 -12z" fill="currentColor"/>
+						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
+					편집샵 관리
+					<div class="sb-sidenav-collapse-arrow">
+						<svg class="svg-inline--fa fa-angle-down" aria-hidden="true" focusable="false" data-prefix="fas"
+						     data-icon="angle-down" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+						     data-fa-i2svg="">
+							<path fill="currentColor"
+							      d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"></path>
+						</svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
+				</a>
+				<div class="collapse" id="shop" aria-labelledby="headingOne"
+				     data-bs-parent="#sidenavAccordion">
+					<nav class="sb-sidenav-menu-nested nav">
+						<a class="nav-link" th:href="@{/admin/shop/list}">편집샵 리스트</a>
+						<a class="nav-link" th:href="@{/admin/shop/create}">편집샵 생성</a>
+					</nav>
+				</div>
+
+				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#product"
+				   aria-expanded="false" aria-controls="collapsePages">
+					<div class="sb-nav-link-icon">
+						<svg class="svg-inline--fa" aria-hidden="true" focusable="false" data-prefix="fas"
+						     data-icon="chart-area" role="img" xmlns="http://www.w3.org/2000/svg"
+						     viewBox="0 0 20 18"
+						     data-fa-i2svg="">
+							<path d="M11.5 23l-8.5-4.535v-3.953l5.4 3.122 3.1-3.406v8.772zm1-.001v-8.806l3.162 3.343 5.338-2.958v3.887l-8.5 4.534zm-10.339-10.125l-2.161-1.244 3-3.302-3-2.823 8.718-4.505 3.215 2.385 3.325-2.385 8.742 4.561-2.995 2.771 2.995 3.443-2.242 1.241v-.001l-5.903 3.27-3.348-3.541 7.416-3.962-7.922-4.372-7.923 4.372 7.422 3.937v.024l-3.297 3.622-5.203-3.008-.16-.092-.679-.393v.002z"
+							      fill="currentColor"/>
+						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
+					상품 관리
+					<div class="sb-sidenav-collapse-arrow">
+						<svg class="svg-inline--fa fa-angle-down" aria-hidden="true" focusable="false" data-prefix="fas"
+						     data-icon="angle-down" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+						     data-fa-i2svg="">
+							<path fill="currentColor"
+							      d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"></path>
+						</svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
+				</a>
+				<div class="collapse" id="product" aria-labelledby="headingOne"
+				     data-bs-parent="#sidenavAccordion">
+					<nav class="sb-sidenav-menu-nested nav">
+						<a class="nav-link" th:href="@{/admin/product/list}">상품 리스트</a>
+						<a class="nav-link" th:href="@{/admin/product/create}">상품 생성</a>
+					</nav>
+				</div>
 
 				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapsePages"
 				   aria-expanded="false" aria-controls="collapsePages">
@@ -81,8 +157,8 @@
 							<path fill="currentColor" d="M270.641,222.44L270.641,222.44c0,9.974,8.086,18.06,18.06,18.06h158.823c9.974,0,18.06-8.086,18.06-18.06v-80.333
 				c0-0.001,0-0.002,0-0.002c-0.005-53.964-44.013-97.482-97.478-97.482c-55.908,0-99.56,46.932-97.466,101.414V222.44z
 				 M306.791,139.032h122.598c1.735,35.174-26.395,64.421-61.281,64.421C332.511,203.453,304.98,173.234,306.791,139.032z"></path>
-							<!--              <path fill="currentColor" d="M144.3 32.04C106.9 31.29 63.7 41.44 18.6 61.29c-11.42 5.026-18.6 16.67-18.6 29.15l0 357.6c0 11.55 11.99 19.55 22.45 14.65c126.3-59.14 219.8 11 223.8 14.01C249.1 478.9 252.5 480 256 480c12.4 0 16-11.38 16-15.98V80.04c0-5.203-2.531-10.08-6.781-13.08C263.3 65.58 216.7 33.35 144.3 32.04zM557.4 61.29c-45.11-19.79-88.48-29.61-125.7-29.26c-72.44 1.312-118.1 33.55-120.9 34.92C306.5 69.96 304 74.83 304 80.04v383.1C304 468.4 307.5 480 320 480c3.484 0 6.938-1.125 9.781-3.328c3.925-3.018 97.44-73.16 223.8-14c10.46 4.896 22.45-3.105 22.45-14.65l.0001-357.6C575.1 77.97 568.8 66.31 557.4 61.29z"></path>-->
-						</svg><!-- <i class="fas fa-book-open"></i> Font Awesome fontawesome.com --></div>
+						</svg>
+					</div>
 					사이트 관리
 					<div class="sb-sidenav-collapse-arrow">
 						<svg class="svg-inline--fa fa-angle-down" aria-hidden="true" focusable="false" data-prefix="fas"
@@ -105,82 +181,13 @@
 					<div class="sb-nav-link-icon">
 						<svg class="svg-inline--fa fa-book-open" aria-hidden="true" focusable="false" data-prefix="fas"
 						     data-icon="book-open" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
-						     data-fa-i2svg="">
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M437.4,197.6H307.6c-7.8,0-14.2,6.3-14.2,14.1v141.1c0,7.8,6.3,14.1,14.1,14.1h129.9c7.8,0,14.1-6.3,14.1-14.1V211.7C451.5,203.9,445.2,197.6,437.4,197.6z M423.4,338.7H321.7V225.8h101.7V338.7z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M360.7,409.3H70.6c-7.8,0-14.1,6.3-14.1,14.1c-0.1,7.7,6.3,14.1,14.1,14.1h290.1c7.8,0,14.1-6.3,14.1-14.1C374.8,415.6,368.5,409.3,360.7,409.3z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M251.2,338.7H70.6c-7.8,0-14.1,6.3-14.1,14.1c-0.1,7.8,6.3,14.1,14.1,14.1h180.6c7.8,0,14.1-6.3,14.1-14.1S259,338.7,251.2,338.7z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M251.2,268.1H70.6c-7.8,0-14.1,6.3-14.1,14.1c-0.1,7.8,6.3,14.1,14.1,14.1h180.6c7.8,0,14.1-6.3,14.1-14.1C265.3,274.4,259,268.1,251.2,268.1z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M251.2,197.6H70.6c-7.8,0-14.1,6.3-14.1,14.1c-0.1,7.8,6.3,14.1,14.1,14.1h180.6c7.8,0,14.1-6.3,14.1-14.1C265.3,203.9,259,197.6,251.2,197.6z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M493.9,0H14.1C6.3,0,0,6.3,0,14.1v479.8c0,7.8,6.3,14.1,14.1,14.1h403c3.7,0,7.3-1.5,10-4.1l76.8-76.8c2.6-2.6,4.1-6.2,4.1-10v-403C508,6.3,501.7,0,493.9,0z M431.2,459.8v-28.6h28.6L431.2,459.8z M479.8,403L479.8,403h-62.7c-7.8,0-14.1,6.3-14.1,14.1v62.7H28.2V28.2h451.6V403z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M383.4,108.6c-5.8,0-10.6-4.7-10.6-10.6c0-5.8,4.7-10.6,10.6-10.6c2.9,0,5.7,1.2,7.7,3.3c2.7,2.8,7.1,3,10,0.3c2.8-2.7,3-7.1,0.3-10c-4.6-4.9-11.2-7.8-18-7.8c-13.6,0-24.7,11.1-24.7,24.7c0,13.6,11.1,24.7,24.7,24.7c5.8,0,10.6,4.7,10.6,10.6c0,5.8-4.7,10.6-10.6,10.6c-2.9,0-5.7-1.2-7.7-3.3c-2.7-2.8-7.1-3-10-0.3c-2.8,2.7-3,7.1-0.3,10c4.6,4.9,11.2,7.8,18,7.8c13.6,0,24.7-11.1,24.7-24.7S397,108.6,383.4,108.6z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M221.5,123c3.9,0,7.1-3.2,7.1-7.1c0-3.9-3.2-7.1-7.1-7.1h-20.8V87.9h20.8c3.9,0,7.1-3.2,7.1-7.1c0-3.9-3.2-7.1-7.1-7.1h-27.8c-3.9,0-7.1,3.2-7.1,7.1v70.5c0.1,3.9,3.2,7.1,7.1,7.1h27.8c3.9,0,7.1-3.2,7.1-7.1s-3.2-7.1-7.1-7.1h-20.8V123H221.5z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M149.4,73.7c-3.9,0-7.1,3.2-7.1,7.1v45L113,77.2c-1.6-2.7-4.9-4-7.9-3.2c-3.1,0.8-5.2,3.6-5.2,6.8v70.5c0,3.9,3.2,7.1,7.1,7.1s7.1-3.2,7.1-7.1v-45l29.2,48.7c1.3,2.2,3.6,3.4,6.1,3.4c0.6,0,1.3-0.1,1.9-0.3c3.1-0.8,5.2-3.6,5.2-6.8V80.8C156.5,76.9,153.3,73.7,149.4,73.7z"/>
-								</g>
-							</g>
-							<g>
-								<g>
-									<path fill="currentColor"
-									      d="M335.1,74.1c-3.8-1-7.6,1.2-8.6,5l-12.1,45c0,0-12.3-45.4-12.4-45.6c-0.8-2.1-2.4-3.8-4.7-4.4c-3.8-1-7.6,1.2-8.6,5l-12.1,45l-12-45c-1-3.8-4.9-6-8.6-5c-3.8,1-6,4.9-5,8.6l18.9,70.5c0.8,3.1,3.6,5.2,6.8,5.2s6-2.1,6.8-5.2l12-45l12.1,45c0.8,3.1,3.6,5.2,6.8,5.2c3.2,0,6-2.1,6.8-5.2l18.9-70.5C341.1,78.9,338.9,75.1,335.1,74.1z"/>
-								</g>
-							</g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
-							<g></g>
+						     data-fa-i2svg="" style="transform: scaleY(-1);">
+							<path d="M247 610 c-67 -21 -127 -88 -148 -162 -6 -25 -16 -38 -27 -38 -42 -1 -72 -49 -72 -115 0 -59 13 -83 57 -101 65 -28 73 -17 73 104 0 128 11 170 53 219 75 85 199 85 274 0 42 -49 53 -91 53 -219 0 -121 8 -132 73 -104 44 18 57 42 57 101 0 66 -30 114 -72 115 -11 0 -21 13 -28 38 -14 54 -48 101 -96 135 -33 23 -55 30 -105 33 -35 2 -77 -1 -92 -6z"
+							      fill="currentColor"/>
+							<path d="M90 145 c0 -29 63 -85 103 -92 47 -7 50 12 3 21 -32 6 -86 54 -86 77 0 5 -4 9 -10 9 -5 0 -10 -7 -10 -15z"
+							      fill="currentColor"/>
+							<path d="M270 86 c-6 -8 -10 -25 -8 -38 3 -21 8 -23 58 -23 50 0 55 2 58 23 2 13 -2 30 -8 38 -16 18 -84 18 -100 0z"
+							      fill="currentColor"/>
 						</svg><!-- <i class="fas fa-book-open"></i> Font Awesome fontawesome.com --></div>
 					CS 업무
 					<div class="sb-sidenav-collapse-arrow">
