--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -4,129 +4,279 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!-- START HEADER -->
 <header class="header_wrap fixed-top header_with_topbar" th:fragment="headerFragment">
-<!--  <div class="top-header">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <div class="d-flex align-items-center justify-content-center justify-content-md-start">
-            <div class="lng_dropdown me-2">
+	<style>
+        /*width ~990px*/
+        @media screen and (max-width: 990px) {
+            .nav-link {
+                color: black !important;
+            }
 
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>-->
-  <div class="bottom_header dark_skin main_menu_uppercase">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand me-md-5 me-0" href="/">
-          <!-- 182 x 72 logo -->
-          <img class="logo_light" th:src="@{/user/assets/images/logo_light.png}" alt="logo" />
-          <img class="logo_dark" th:src="@{/user/assets/images/logo_dark.png}" alt="logo" />
-        </a>
+            .userInformation {
+                display: none;
+            }
 
-<!--        <button class="navbar-button">-->
-<!--          <button type="button" class="btn btn-block" style="background-color: darkgray; color: white;">회원가입</button>-->
-<!--        </button>-->
+            .menu-userInformation {
+                display: block;
+            }
+        }
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false">
-          <span class="ion-android-menu"></span>
-        </button>
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
 
-        <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li><a class="nav-link nav_item" href="/content-list">컨텐츠</a></li>
-            <li><a class="nav-link nav_item" href="/shop-list">편집샵 목록</a></li>
-            <!--<li class="dropdown">
-              <a class="dropdown-toggle nav-link" href="/shop-list" data-bs-toggle="dropdown">편집샵 목록</a>
-              <div class="dropdown-menu">
-                <ul>
-                  <li><a class="dropdown-item nav-link nav_item" href="about.html">About Us</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="contact.html">Contact Us</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="faq.html">Faq</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="404.html">404 Error Page</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="login">Login</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="signup.html">Register</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="term-condition.html">Terms and Conditions</a></li>
-                </ul>
-              </div>
-            </li>-->
+        .header-name {
+            display: inline-block;
+            font-size: 1rem;
+            font-weight: 450;
+            color: white;
+        }
 
-            <li><a class="nav-link nav_item" href="/introduce">서비스 소개</a></li>
+        .header-email {
+            display: inline-block;
+            font-size: 0.8rem;
+            color: white;
+        }
 
-                <li class="d-block d-sm-none" id="mobile-menu">
-    <!--              모바일에서만 표시-->
-                  <li><hr></li>
-                  <li><a class="nav-link nav_item" href="/login" sec:authorize="isAnonymous()">로그인</a></li>
-                  <li><a class="nav-link nav_item" href="/signup" sec:authorize="isAnonymous()">회원가입</a></li>
-                </li>
-          </ul>
-        </div>
-        <ul class="navbar-nav attr-nav align-items-center">
-          <li>
-            <!--<a href="javascript:void(0);" class="nav-link search_trigger"><i class="linearicons-magnifier"></i></a>
-            <div class="search_wrap">
-              <span class="close-search"><i class="ion-ios-close-empty"></i></span>
-              <form>
-                <input type="text" placeholder="Search" class="form-control" id="search_input">
-                <button type="submit" class="search_icon"><i class="ion-ios-search-strong"></i></button>
-              </form>
-            </div><div class="search_overlay"></div><div class="search_overlay"></div>-->
+        .arrow-icon {
+            display: inline-block;
+            color: white;
+        }
 
-          <div sec:authorize="isAnonymous()">
-            <div class="d-none d-md-block d-xl-none d-xxl-none">
-<!--              모바일에서만 표시 안함-->
-              <button class="btn-gray navbar-button me-1">
-                회원가입
-              </button>
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: #f9f9f9;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        }
 
-              <button class="btn-white navbar-button navbar-login-btn">
-                <a href="/login">로그인</a>
-              </button>
-            </div>
-          </div>
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
 
-              <td><span sec:authentication="name"></span></td>
-              <button class="btn-gray navbar-button me-1" sec:authorize="isAuthenticated()">
-                <a href="/mypage">마이페이지</a>
-<!--                <a href="/mypage">로그아웃</a>-->
-              </button>
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+	</style>
+	<!--  <div class="top-header">
+		<div class="container">
+		  <div class="row align-items-center">
+			<div class="col-md-6">
+			  <div class="d-flex align-items-center justify-content-center justify-content-md-start">
+				<div class="lng_dropdown me-2">
 
-          </li>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>-->
 
 
-<!--          <li>-->
-<!--            <a href="javascript:void(0);" class="nav-link">-->
-<!--              <button type="button" class="btn btn-block" style="background-color: darkgray; color: white;">회원가입</button>-->
-<!--            </a>-->
-<!--          </li>-->
+	<script>
+        $('document').ready(function () {
+
+            let headerTag = $(".header_wrap");
+
+            headerTag.css('background-color', "rgb(0, 25, 91)");
+            // enable light logo
+            headerTag.find(".logo_light").css('display', "block");
+            headerTag.find(".logo_dark").css('display', "none");
+
+            headerTag.find(".header-name").css('color', "white");
+            headerTag.find(".header-email").css('color', "white");
+            headerTag.find(".arrow-icon").css('color', "white");
+
+            headerTag.find(".navbar-toggler").css('color', "white");
+
+            // .nav_item white
+            headerTag.find(".nav_item").css('color', "white");
 
 
-<!--          <li class="dropdown cart_dropdown"><a class="nav-link cart_trigger" href="#" data-bs-toggle="dropdown"><i class="linearicons-cart"></i><span class="cart_count">2</span></a>
-            <div class="cart_box dropdown-menu dropdown-menu-right">
-              <ul class="cart_list">
-                <li>
-                  <a href="#" class="item_remove"><i class="ion-close"></i></a>
-                  <a href="#"><img src="assets/images/cart_thamb1.jpg" alt="cart_thumb1">Variable product 001</a>
-                  <span class="cart_quantity"> 1 x <span class="cart_amount"> <span class="price_symbole">$</span></span>78.00</span>
-                </li>
-                <li>
-                  <a href="#" class="item_remove"><i class="ion-close"></i></a>
-                  <a href="#"><img src="assets/images/cart_thamb2.jpg" alt="cart_thumb2">Ornare sed consequat</a>
-                  <span class="cart_quantity"> 1 x <span class="cart_amount"> <span class="price_symbole">$</span></span>81.00</span>
-                </li>
-              </ul>
-              <div class="cart_footer">
-                <p class="cart_total"><strong>Subtotal:</strong> <span class="cart_price"> <span class="price_symbole">$</span></span>159.00</p>
-                <p class="cart_buttons"><a href="#" class="btn btn-fill-line btn-radius view-cart">View Cart</a><a href="#" class="btn btn-fill-out btn-radius checkout">Checkout</a></p>
-              </div>
-            </div>
-          </li>-->
-        </ul>
-      </nav>
-    </div>
-  </div>
+            // headerTag.querySelector(".navbar-nav").style.backgroundColor = "black";
+
+            $(".dropdown").click(function () {
+                $(".dropdown-content").toggle();
+            });
+
+            window.addEventListener("scroll", function () {
+                if (window.scrollY > 0) {
+
+                    headerTag.css('background-color', "white");
+                    headerTag.find(".logo_light").css('display', "none");
+                    headerTag.find(".logo_dark").css('display', "block");
+
+                    headerTag.find(".header-name").css('color', "black");
+                    headerTag.find(".header-email").css('color', "gray");
+                    headerTag.find(".arrow-icon").css('color', "black");
+
+                    headerTag.find(".navbar-toggler").css('color', "black");
+
+                    // .nav_item white
+                    headerTag.find(".nav_item").css('color', "black");
+
+                } else {
+                    headerTag.css('background-color', "rgb(0, 25, 91)");
+                    // enable light logo
+                    headerTag.find(".logo_light").css('display', "block");
+                    headerTag.find(".logo_dark").css('display', "none");
+
+                    headerTag.find(".header-name").css('color', "white");
+                    headerTag.find(".header-email").css('color', "white");
+                    headerTag.find(".arrow-icon").css('color', "white");
+
+                    headerTag.find(".navbar-toggler").css('color', "white");
+
+                    headerTag.find(".nav_item").css('color', "white");
+                }
+            });
+        });
+	</script>
+
+	<div class="bottom_header dark_skin main_menu_uppercase">
+		<div class="container">
+			<nav class="navbar navbar-expand-lg">
+				<a class="navbar-brand me-md-5 me-0" href="/">
+					<!-- 182 x 72 logo -->
+					<img class="logo_light" th:src="@{/user/assets/images/logo_light.png}" alt="logo"/>
+					<img class="logo_dark" th:src="@{/user/assets/images/logo_dark.png}" alt="logo"/>
+				</a>
+
+				<!--        <button class="navbar-button">-->
+				<!--          <button type="button" class="btn btn-block" style="background-color: darkgray; color: white;">회원가입</button>-->
+				<!--        </button>-->
+
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				        data-bs-target="#navbarSupportedContent" aria-expanded="false">
+					<span class="ion-android-menu"></span>
+				</button>
+
+				<div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
+					<ul class="navbar-nav">
+						<li><a class="nav-link nav_item" href="/content-list">컨텐츠</a></li>
+						<li><a class="nav-link nav_item" href="/shop-list">편집샵 목록</a></li>
+						<!--<li class="dropdown">
+						  <a class="dropdown-toggle nav-link" href="/shop-list" data-bs-toggle="dropdown">편집샵 목록</a>
+						  <div class="dropdown-menu">
+							<ul>
+							  <li><a class="dropdown-item nav-link nav_item" href="about.html">About Us</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="contact.html">Contact Us</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="faq.html">Faq</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="404.html">404 Error Page</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="login">Login</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="signup.html">Register</a></li>
+							  <li><a class="dropdown-item nav-link nav_item" href="term-condition.html">Terms and Conditions</a></li>
+							</ul>
+						  </div>
+						</li>-->
+
+						<li><a class="nav-link nav_item" href="/introduce">서비스 소개</a></li>
+
+						<li class="d-block d-sm-none" id="mobile-menu">
+							<!--              모바일에서만 표시-->
+						<li>
+							<hr>
+						</li>
+						<li><a class="nav-link nav_item" href="/login" sec:authorize="isAnonymous()">로그인</a></li>
+						<li><a class="nav-link nav_item" href="/signup" sec:authorize="isAnonymous()">회원가입</a></li>
+
+
+						<li class="menu-userInformation" sec:authorize="isAuthenticated()" style="display:none">
+							<a class="nav-link nav_item" sec:authentication="name"></a>
+							<a class="nav-link nav_item" href="/mypage">마이페이지</a>
+							<a class="nav-link nav_item" href="/logout">로그아웃</a>
+						</li>
+					</ul>
+				</div>
+				<ul class="navbar-nav attr-nav align-items-center">
+					<li>
+						<!--<a href="javascript:void(0);" class="nav-link search_trigger"><i class="linearicons-magnifier"></i></a>
+						<div class="search_wrap">
+						  <span class="close-search"><i class="ion-ios-close-empty"></i></span>
+						  <form>
+							<input type="text" placeholder="Search" class="form-control" id="search_input">
+							<button type="submit" class="search_icon"><i class="ion-ios-search-strong"></i></button>
+						  </form>
+						</div><div class="search_overlay"></div><div class="search_overlay"></div>-->
+
+						<div sec:authorize="isAnonymous()">
+							<div class="d-none d-md-block d-xl-none d-xxl-none">
+								<!--              모바일에서만 표시 안함-->
+								<button class="btn-gray navbar-button me-1">
+									회원가입
+								</button>
+
+								<button class="btn-white navbar-button navbar-login-btn">
+									<a href="/login">로그인</a>
+								</button>
+							</div>
+						</div>
+
+						<div class="userInformation" sec:authorize="isAuthenticated()">
+
+							<div class="dropdown">
+								<span class="header-name" sec:authentication="principal.name"></span> <br/>
+								<span class="header-email" sec:authentication="name"></span>
+								<!--                      <th:block th:with="auth=${#authentication.getPrincipal()}">-->
+								<!--                          <p th:text="${auth ? auth.realName : ''}">홍길동</p>-->
+								<!--                      </th:block>-->
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+								     class="arrow-icon bi bi-arrow-down" viewBox="0 0 16 16">
+									<path fill-rule="evenodd"
+									      d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+								</svg>
+								<div class="dropdown-content">
+									<a href="/mypage">마이페이지</a>
+									<a href="/logout">로그아웃</a>
+								</div>
+							</div>
+
+							<!--              <td><span sec:authentication="name"></span></td>-->
+							<!--              <button class="btn-gray navbar-button me-1">-->
+							<!--                <a href="/mypage">마이페이지</a>-->
+							<!--&lt;!&ndash;                <a href="/mypage">로그아웃</a>&ndash;&gt;-->
+							<!--              </button>-->
+						</div>
+
+
+					</li>
+
+
+					<!--          <li>-->
+					<!--            <a href="javascript:void(0);" class="nav-link">-->
+					<!--              <button type="button" class="btn btn-block" style="background-color: darkgray; color: white;">회원가입</button>-->
+					<!--            </a>-->
+					<!--          </li>-->
+
+
+					<!--          <li class="dropdown cart_dropdown"><a class="nav-link cart_trigger" href="#" data-bs-toggle="dropdown"><i class="linearicons-cart"></i><span class="cart_count">2</span></a>
+								<div class="cart_box dropdown-menu dropdown-menu-right">
+								  <ul class="cart_list">
+									<li>
+									  <a href="#" class="item_remove"><i class="ion-close"></i></a>
+									  <a href="#"><img src="assets/images/cart_thamb1.jpg" alt="cart_thumb1">Variable product 001</a>
+									  <span class="cart_quantity"> 1 x <span class="cart_amount"> <span class="price_symbole">$</span></span>78.00</span>
+									</li>
+									<li>
+									  <a href="#" class="item_remove"><i class="ion-close"></i></a>
+									  <a href="#"><img src="assets/images/cart_thamb2.jpg" alt="cart_thumb2">Ornare sed consequat</a>
+									  <span class="cart_quantity"> 1 x <span class="cart_amount"> <span class="price_symbole">$</span></span>81.00</span>
+									</li>
+								  </ul>
+								  <div class="cart_footer">
+									<p class="cart_total"><strong>Subtotal:</strong> <span class="cart_price"> <span class="price_symbole">$</span></span>159.00</p>
+									<p class="cart_buttons"><a href="#" class="btn btn-fill-line btn-radius view-cart">View Cart</a><a href="#" class="btn btn-fill-out btn-radius checkout">Checkout</a></p>
+								  </div>
+								</div>
+							  </li>-->
+				</ul>
+			</nav>
+		</div>
+	</div>
 </header>
 <!-- END HEADER -->
 </html>
