헤더 푸터 수정

--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -206,7 +206,7 @@
 						<div sec:authorize="isAnonymous()" class="pc-show">
 							<!--              모바일에서만 표시 안함-->
 							<button class="btn-gray navbar-button me-1">
-								회원가입
+								<a href="/signup">회원가입</a>
 							</button>
 
 							<button class="btn-white navbar-button navbar-login-btn">
