--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -1,111 +1,114 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <!-- START FOOTER -->
-  <footer class="footer_dark" th:fragment="footerFragment">
-    <div class="footer_top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="widget">
-              <h6 class="widget_title">SHIFT 3</h6>
-              <ul class="contact_info contact_info_light">
-                <li>
-                  우리는 이런 회사입니다.
-                </li>
-                <li>
-                  이런것을 잘합니다.
-                </li>
-                <li>
-                  이런 비전을 갖고 있습니다.
-                </li>
-                <!--<li>
-                  <i class="ti-location-pin"></i>
-                  <p>123 Street, Old Trafford, NewYork, USA</p>
-                </li>
-                <li>
-                  <i class="ti-email"></i>
-                  <a href="mailto:info@sitename.com">info@sitename.com</a>
-                </li>
-                <li>
-                  <i class="ti-mobile"></i>
-                  <p>+ 457 789 789 65</p>
-                </li>-->
-              </ul>
-            </div>
-            <div class="widget">
+<!-- START FOOTER -->
+<footer class="footer_dark" th:fragment="footerFragment">
+	<div class="footer_top">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="widget">
+						<h6 class="widget_title">SHIFT 3</h6>
+						<ul class="contact_info contact_info_light">
+							<li>
+								우리는 이런 회사입니다.
+							</li>
+							<li>
+								이런것을 잘합니다.
+							</li>
+							<li>
+								이런 비전을 갖고 있습니다.
+							</li>
+							<!--<li>
+							  <i class="ti-location-pin"></i>
+							  <p>123 Street, Old Trafford, NewYork, USA</p>
+							</li>
+							<li>
+							  <i class="ti-email"></i>
+							  <a href="mailto:info@sitename.com">info@sitename.com</a>
+							</li>
+							<li>
+							  <i class="ti-mobile"></i>
+							  <p>+ 457 789 789 65</p>
+							</li>-->
+						</ul>
+					</div>
+					<div class="widget">
 
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-3 col-sm-3">
-            <div class="widget">
-              <h6 class="widget_title">소메뉴</h6>
-              <ul class="widget_links">
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-3 col-sm-3">
-            <div class="widget">
-              <h6 class="widget_title">소메뉴</h6>
-              <ul class="widget_links">
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-              </ul>
-            </div>
-          </div>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
+					<div class="widget">
+						<h6 class="widget_title">소메뉴</h6>
+						<ul class="widget_links">
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
+					<div class="widget">
+						<h6 class="widget_title">소메뉴</h6>
+						<ul class="widget_links">
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+						</ul>
+					</div>
+				</div>
 
-          <div class="col-lg-2 col-md-3 col-sm-3">
-            <div class="widget">
-              <h6 class="widget_title">소메뉴</h6>
-              <ul class="widget_links">
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-                <li><a href="#">메뉴명</a></li>
-              </ul>
-            </div>
-          </div>
-<!--          <div class="col-lg-4 col-md-12 col-sm-12">
-            <div class="widget">
-              <h6 class="widget_title">Subscribe Our Newsletter</h6>
-              <p>If you want to get an email from us every time we have a new special offer, then sign up here!</p>
-              <div class="newsletter_form rounded_input">
-                <form>
-                  <input type="text" required="" class="form-control" placeholder="Enter Email Address">
-                  <button type="submit" class="btn-send" name="submit" value="Submit"><i class="icon-envelope-letter"></i></button>
-                </form>
-              </div>
-            </div>
-          </div>-->
-        </div>
-      </div>
-    </div>
-    <div class="bottom_footer border-top-tran">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <p class="mb-md-0 text-center text-md-start">Copyright © SHIFT 3 | All Rights Reserved</p>
-          </div>
-          <div class="col-md-6">
-            <ul class="footer_sns footer_payment text-center text-md-end">
-              <li><a href="#"><img th:src="@{/user/assets/images/icon_facebook_white.png}" alt="facebook"></a></li>
-              <li><a href="https://www.instagram.com/shift3_official/"><img th:src="@{/user/assets/images/icon_instagram_white.png}" alt="instagram"></a></li>
-              <li><a href="#"><img th:src="@{/user/assets/images/icon_twitter_white.png}" alt="twitter"></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- END FOOTER -->
+				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
+					<div class="widget">
+						<h6 class="widget_title">소메뉴</h6>
+						<ul class="widget_links">
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">메뉴명</a></li>
+						</ul>
+					</div>
+				</div>
+				<!--          <div class="col-lg-4 col-md-12 col-sm-12">
+							<div class="widget">
+							  <h6 class="widget_title">Subscribe Our Newsletter</h6>
+							  <p>If you want to get an email from us every time we have a new special offer, then sign up here!</p>
+							  <div class="newsletter_form rounded_input">
+								<form>
+								  <input type="text" required="" class="form-control" placeholder="Enter Email Address">
+								  <button type="submit" class="btn-send" name="submit" value="Submit"><i class="icon-envelope-letter"></i></button>
+								</form>
+							  </div>
+							</div>
+						  </div>-->
+			</div>
+		</div>
+	</div>
+	<div class="bottom_footer border-top-tran">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<p class="mb-md-0 text-center text-md-start">Copyright © SHIFT 3 | All Rights Reserved</p>
+				</div>
+				<div class="col-md-6">
+					<ul class="footer_sns footer_payment text-center text-md-end">
+						<li><a href="#"><img th:src="@{/user/assets/images/icon_facebook_white.png}" alt="facebook"></a>
+						</li>
+						<li><a href="https://www.instagram.com/shift3_official/"><img
+								th:src="@{/user/assets/images/icon_instagram_white.png}" alt="instagram"></a></li>
+						<li><a href="#"><img th:src="@{/user/assets/images/icon_twitter_white.png}" alt="twitter"></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- END FOOTER -->
 
-  <a href="#" class="scrollup" style="display: none;"><i class="ion-ios-arrow-up"></i></a>
+<a href="#" class="scrollup" style="display: none;"><i class="ion-ios-arrow-up"></i></a>
 </html>
