--- a/src/main/resources/templates/admin/content/pages/product/create.html
+++ b/src/main/resources/templates/admin/content/pages/product/create.html
@@ -81,16 +81,16 @@
 				</script>
 			</div>
 
-			<div class="row mb-3">
-				<label class="form-label" for="hashtag-input">상품 해시태그 입력 (비슷한 상품 표시에 필요)</label>
-				<input type="text" class="form-control" id="hashtag-input" aria-describedby="hashtag-input-help"
-				       name="hashtag">
-				<small id="hashtag-input-help1" class="form-text text-muted">콤마(,)로 구문하여 해시태그를 입력해주세요.</small><br/>
-				<small id="hashtag-input-help2" class="form-text text-muted">예시) 옷, 바지, 슈프림, 힙합</small>
-				<script>
-                    new Tagify(document.getElementById("hashtag-input"))
-				</script>
-			</div>
+			<!--			<div class="row mb-3">-->
+			<!--				<label class="form-label" for="hashtag-input">상품 해시태그 입력 (비슷한 상품 표시에 필요)</label>-->
+			<!--				<input type="text" class="form-control" id="hashtag-input" aria-describedby="hashtag-input-help"-->
+			<!--				       name="hashtag">-->
+			<!--				<small id="hashtag-input-help1" class="form-text text-muted">콤마(,)로 구문하여 해시태그를 입력해주세요.</small><br/>-->
+			<!--				<small id="hashtag-input-help2" class="form-text text-muted">예시) 옷, 바지, 슈프림, 힙합</small>-->
+			<!--				<script>-->
+			<!--                    new Tagify(document.getElementById("hashtag-input"))-->
+			<!--				</script>-->
+			<!--			</div>-->
 
 			<div class="row mb-3">
 				<label class="form-label" for="url">판매 링크 입력</label>
