--- a/src/main/resources/templates/user/content/pages/product/detail.html
+++ b/src/main/resources/templates/user/content/pages/product/detail.html
@@ -28,21 +28,24 @@
 								</a>
 							</div>
 							<div class="item">
-								<a href="#" class="product_gallery_item" data-image="assets/images/product_img1-2.jpg"
+								<a href="#" class="product_gallery_item"
+								   data-image="/user/assets/images/product_img1-2.jpg"
 								   data-zoom-image="assets/images/product_zoom_img2.jpg">
-									<img src="assets/images/product_small_img2.jpg" alt="product_small_img2"/>
+									<img src="/user/assets/images/product_small_img2.jpg" alt="product_small_img2"/>
 								</a>
 							</div>
 							<div class="item">
-								<a href="#" class="product_gallery_item" data-image="assets/images/product_img1-3.jpg"
+								<a href="#" class="product_gallery_item"
+								   data-image="/user/assets/images/product_img1-3.jpg"
 								   data-zoom-image="assets/images/product_zoom_img3.jpg">
-									<img src="assets/images/product_small_img3.jpg" alt="product_small_img3"/>
+									<img src="/user/assets/images/product_small_img3.jpg" alt="product_small_img3"/>
 								</a>
 							</div>
 							<div class="item">
-								<a href="#" class="product_gallery_item" data-image="assets/images/product_img1-4.jpg"
-								   data-zoom-image="assets/images/product_zoom_img4.jpg">
-									<img src="assets/images/product_small_img4.jpg" alt="product_small_img4"/>
+								<a href="#" class="product_gallery_item"
+								   data-image="/user/assets/images/product_img1-4.jpg"
+								   data-zoom-image="/user/assets/images/product_zoom_img4.jpg">
+									<img src="/user/assets/images/product_small_img4.jpg" alt="product_small_img4"/>
 								</a>
 							</div>
 						</div>
@@ -60,8 +63,17 @@
 								<div class="subtitle text-black" style="font-size: 1.4rem;">
 									상품 설명
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa
-									enim. Nullam id varius nunc id varius nunc.</p>
+								<p>헌법재판소는 법관의 자격을 가진 9인의 재판관으로 구성하며, 재판관은 대통령이 임명한다. 국가는 모성의 보호를 위하여 노력하여야 한다. 모든 국민은
+									소급입법에 의하여 참정권의 제한을 받거나 재산권을 박탈당하지 아니한다.
+
+									한 회계연도를 넘어 계속하여 지출할 필요가 있을 때에는 정부는 연한을 정하여 계속비로서 국회의 의결을 얻어야 한다. 대한민국의 주권은 국민에게 있고,
+									모든 권력은 국민으로부터 나온다.
+
+									탄핵결정은 공직으로부터 파면함에 그친다. 그러나, 이에 의하여 민사상이나 형사상의 책임이 면제되지는 아니한다. 법률이 헌법에 위반되는 여부가 재판의
+									전제가 된 경우에는 법원은 헌법재판소에 제청하여 그 심판에 의하여 재판한다.
+
+									국회의 회의는 공개한다. 다만, 출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고 인정할 때에는 공개하지 아니할 수
+									있다.</p>
 							</div>
 						</div>
 						<hr/>
@@ -98,6 +110,16 @@
 				<div class="col-6">
 					<div class="heading_s1">
 						<h3>편집샵 정보</h3>
+						헌법재판소는 법관의 자격을 가진 9인의 재판관으로 구성하며, 재판관은 대통령이 임명한다. 국가는 모성의 보호를 위하여 노력하여야 한다. 모든 국민은 소급입법에 의하여
+						참정권의 제한을 받거나 재산권을 박탈당하지 아니한다.
+
+						한 회계연도를 넘어 계속하여 지출할 필요가 있을 때에는 정부는 연한을 정하여 계속비로서 국회의 의결을 얻어야 한다. 대한민국의 주권은 국민에게 있고, 모든 권력은
+						국민으로부터 나온다.
+
+						탄핵결정은 공직으로부터 파면함에 그친다. 그러나, 이에 의하여 민사상이나 형사상의 책임이 면제되지는 아니한다. 법률이 헌법에 위반되는 여부가 재판의 전제가 된 경우에는
+						법원은 헌법재판소에 제청하여 그 심판에 의하여 재판한다.
+
+						국회의 회의는 공개한다. 다만, 출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고 인정할 때에는 공개하지 아니할 수 있다.
 					</div>
 
 
@@ -106,6 +128,7 @@
 				<div class="col-6">
 					<div class="heading_s1">
 						<h3>연관 컨텐츠 피드</h3>
+
 					</div>
 				</div>
 
@@ -128,7 +151,7 @@
 							<div class="product">
 								<div class="product_img">
 									<a href="shop-product-detail.html">
-										<img src="assets/images/product_img1.jpg" alt="product_img1">
+										<img src="/user/assets/images/product_img1.jpg" alt="product_img1">
 									</a>
 									<div class="product_action_box">
 										<ul class="list_none pr_action_btn">
@@ -145,17 +168,7 @@
 									<h6 class="product_title"><a href="shop-product-detail.html">Blue Dress For
 										Woman</a></h6>
 									<div class="product_price">
-										<span class="price">$45.00</span>
-										<del>$55.25</del>
-										<div class="on_sale">
-											<span>35% Off</span>
-										</div>
-									</div>
-									<div class="rating_wrap">
-										<div class="rating">
-											<div class="product_rate" style="width:80%"></div>
-										</div>
-										<span class="rating_num">(21)</span>
+										<span class="price">20,000원</span>
 									</div>
 									<div class="pr_desc">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit
@@ -175,7 +188,7 @@
 							<div class="product">
 								<div class="product_img">
 									<a href="shop-product-detail.html">
-										<img src="assets/images/product_img2.jpg" alt="product_img2">
+										<img src="/user/assets/images/product_img2.jpg" alt="product_img2">
 									</a>
 									<div class="product_action_box">
 										<ul class="list_none pr_action_btn">
@@ -192,17 +205,7 @@
 									<h6 class="product_title"><a href="shop-product-detail.html">Lether Gray Tuxedo</a>
 									</h6>
 									<div class="product_price">
-										<span class="price">$55.00</span>
-										<del>$95.00</del>
-										<div class="on_sale">
-											<span>25% Off</span>
-										</div>
-									</div>
-									<div class="rating_wrap">
-										<div class="rating">
-											<div class="product_rate" style="width:68%"></div>
-										</div>
-										<span class="rating_num">(15)</span>
+										<span class="price">20,000원</span>
 									</div>
 									<div class="pr_desc">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit
@@ -223,7 +226,7 @@
 								<span class="pr_flash">New</span>
 								<div class="product_img">
 									<a href="shop-product-detail.html">
-										<img src="assets/images/product_img3.jpg" alt="product_img3">
+										<img src="/user/assets/images/product_img3.jpg" alt="product_img3">
 									</a>
 									<div class="product_action_box">
 										<ul class="list_none pr_action_btn">
@@ -240,14 +243,7 @@
 									<h6 class="product_title"><a href="shop-product-detail.html">woman full sliv
 										dress</a></h6>
 									<div class="product_price">
-										<span class="price">$68.00</span>
-										<del>$99.00</del>
-									</div>
-									<div class="rating_wrap">
-										<div class="rating">
-											<div class="product_rate" style="width:87%"></div>
-										</div>
-										<span class="rating_num">(25)</span>
+										<span class="price">20,000원</span>
 									</div>
 									<div class="pr_desc">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit
@@ -268,7 +264,7 @@
 							<div class="product">
 								<div class="product_img">
 									<a href="shop-product-detail.html">
-										<img src="assets/images/product_img4.jpg" alt="product_img4">
+										<img src="/user/assets/images/product_img4.jpg" alt="product_img4">
 									</a>
 									<div class="product_action_box">
 										<ul class="list_none pr_action_btn">
@@ -285,17 +281,7 @@
 									<h6 class="product_title"><a href="shop-product-detail.html">light blue Shirt</a>
 									</h6>
 									<div class="product_price">
-										<span class="price">$69.00</span>
-										<del>$89.00</del>
-										<div class="on_sale">
-											<span>20% Off</span>
-										</div>
-									</div>
-									<div class="rating_wrap">
-										<div class="rating">
-											<div class="product_rate" style="width:70%"></div>
-										</div>
-										<span class="rating_num">(22)</span>
+										<span class="price">20,000원</span>
 									</div>
 									<div class="pr_desc">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit
@@ -315,7 +301,7 @@
 							<div class="product">
 								<div class="product_img">
 									<a href="shop-product-detail.html">
-										<img src="assets/images/product_img5.jpg" alt="product_img5">
+										<img src="/user/assets/images/product_img5.jpg" alt="product_img5">
 									</a>
 									<div class="product_action_box">
 										<ul class="list_none pr_action_btn">
@@ -332,17 +318,7 @@
 									<h6 class="product_title"><a href="shop-product-detail.html">blue dress for
 										woman</a></h6>
 									<div class="product_price">
-										<span class="price">$45.00</span>
-										<del>$55.25</del>
-										<div class="on_sale">
-											<span>35% Off</span>
-										</div>
-									</div>
-									<div class="rating_wrap">
-										<div class="rating">
-											<div class="product_rate" style="width:80%"></div>
-										</div>
-										<span class="rating_num">(21)</span>
+										<span class="price">20,000원</span>
 									</div>
 									<div class="pr_desc">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit
